# Link

./: .editorconfig  .env.production.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .warpignore  ADR-002-Distributed-Database-Strategy.md  AUTHENTICATION_MIGRATION_SUMMARY.md  BACKUP_FILES_SUMMARY.md  CHANGELOG.md  CICD_Pipeline_Flowchart.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_COMPLETED 2.md  CLEANUP_PLAN.md  CORRECTED_IMPLEMENTATION_SUMMARY 2.md  DATABASE_MONITORING_DEPLOYMENT_COMPLETE.md  DATABASE_MONITORING_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS_EXAMPLE.md  DESIGN-001-Service-Discovery-Load-Balancing 2.md  ENVIRONMENT_STANDARDIZATION_SUMMARY.md  EXECUTE_SECURITY_TESTS.md  GIT_SYNC_WORKFLOW.md  MERGE_TO_MASTER_GUIDE.md  MONTAGE_IMPLEMENTATION.md  Makefile  Makefile.cache  OBSERVABILITY_IMPLEMENTATION_SUMMARY.md  ONBOARDING_FRONTEND_IMPLEMENTATION.md  Project Vision.md  README.md  SECURITY_SETUP_GUIDE.md  SHARING_GUIDE.md  SYNC_COMPLETION_SUMMARY.md  auth_surface_inventory.csv  auth_surface_inventory.md  docker-compose.cache.yml  docker-compose.multi-instance 2.yml  docker-compose.multi-instance.yml  (+17 more)
.github/: CODEOWNERS  dependabot.yml
.playwright-mcp/: bio-character-limit-test  bio-editing-final-state  bio-editing-mode-active  bio-text-modified  profile-page-initial-state
backend/: .env.production  .env.staging  .env.template  DEVELOPMENT_SETUP.md  LOCAL_DEVELOPMENT.md  Makefile.proto  PERFORMANCE_ANALYSIS.md  RBAC_IMPLEMENTATION.md  docker-compose.new.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  enhanced_performance_test 2.sh  go.work  go.work.sum  init-db.sql  integration-tests.sh  performance_test 2.sh  test_caching.sh  test_load_balancing.sh
docs/: CI-CD-TESTING-GUIDE.md  CI_CD_COMPLETE_ANALYSIS.md  CI_CD_INTEGRATION.md  ENVIRONMENT_CONFIGURATION_STANDARDS 2.md  FEATURE_FLAGS_AND_AB_TESTING.md  FEATURE_FLAGS_OBSERVABILITY.md  FEATURE_FLAGS_SETUP_GUIDE.md  GITOPS_WORKFLOW.md  IAM_ARCHITECTURE.md  README.md  RELEASE_COMMITS.md  SECRET_MANAGEMENT 2.md  SECURITY_FEATURES.md  SERVICE_ACCOUNT_AUTOMATION.md  STRUCTURE.md  TASK_COMPLETION_SUMMARY.md  WORKFLOW_CONSOLIDATION_SUMMARY.md  adr-001-semantic-search-service-reuse.md  api-contract.md  architecture-with-ai-service.md  backlog-onboarding-service-split.md  backup-deployment-guide.md  backup-system-deployment.md  deployment-strategies.md  environment-variables-guide 2.md  onboarding-implementation-summary.md  postgres-ha-migration-guide.md  scripts-inventory 3.md  terraform-suitability 4.md  warp_keep_list.md
frontend/: .env 2.development  .env 2.template  .env.demo  .env.example  .env.preview  .env.production  .env.staging  .env.test.example  .eslintrc.cjs  .gitignore  .percy.yml  ACCESSIBILITY_AUDIT_REPORT.md  AI_SUMMARIES_README.md  API_DOCS.md  BACKEND_ME_ENDPOINT.md  CHANGELOG.md  CI_CD_SETUP.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY_STEP10.md  IMPLEMENTATION_SUMMARY_STEP7.md  IMPLEMENTATION_SUMMARY_STEP8.md  IOS_DEPLOYMENT_CHECKLIST.md  IOS_READINESS_SUMMARY 2.md  OBSERVABILITY.md  ONBOARDING_THEME_BASELINE.md  README.md  TESTING.md  UNIFIED_SEARCH_MIGRATION.md  (+24 more)
(+1219 files in other folders)
